--- a/libft/Makefile
+++ b/libft/Makefile
@@ -8,10 +8,9 @@ SRC = ft_isascii.c ft_isprint.c ft_strlen.c ft_isalpha.c ft_isdigit.c ft_isalnum
 		ft_bzero.c ft_memcpy.c ft_memmove.c ft_strlcpy.c ft_strlcat.c ft_toupper.c ft_tolower.c \
 		ft_strchr.c ft_strrchr.c ft_strncmp.c ft_memchr.c ft_memcmp.c ft_strnstr.c ft_atol.c \
 		ft_calloc.c ft_strdup.c ft_substr.c ft_strtrim.c ft_split.c ft_itoa.c ft_strmapi.c \
-		ft_striteri.c ft_putchar_fd.c ft_putstr_fd.c ft_putendl_fd.c ft_putnbr_fd.c
-BONUS_SRC = ft_lstnew.c ft_lstadd_front.c ft_lstsize.c ft_lstlast.c ft_lstadd_back.c
+		ft_striteri.c ft_putchar_fd.c ft_putstr_fd.c ft_putendl_fd.c ft_putnbr_fd.c \
+		ft_lstnew.c ft_lstadd_front.c ft_lstsize.c ft_lstlast.c ft_lstadd_back.c
 OBJ = $(SRC:.c=.o)
-BONUS_OBJS = $(BONUS_SRC:.c=.o)
 
 	RESET			= \033[0m
 	BLUE			= \033[34m
@@ -31,16 +30,13 @@ $(NAME): $(OBJ)
 	@echo "${YELLOW}Libft compiled ✨ ${RESET}"
 	@$(AR) $(NAME) $(OBJ)
 
-bonus: $(BONUS_OBJS)
-	@$(AR) $(NAME) $(BONUS_OBJS)
-
 %.o: %.c libft.h
 	@echo "${CYAN}🔨 Compiling $<${RESET}"
 	@$(CC) $(CFLAGS) -c $< -o $@
 
 clean:
 	@echo "${RED}🧹 Removing Object Files...${RESET}"
-	@$(RM) $(OBJ) $(BONUS_OBJS)
+	@$(RM) $(OBJ)
 
 fclean: clean
 	@echo "${RED}🧹 Removing ${NAME} ${RESET}"
@@ -48,4 +44,4 @@ fclean: clean
 
 re: fclean all
 
-.PHONY: all clean fclean re bonus
+.PHONY: all clean fclean re
